2016-10-19  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Structuring.pm (sectioning_structure): Use 'next' 
	instead of putting whole body of loop within a condition.  
	Change comment at start of function.  Delete some code used for 
	debugging.

2016-10-19  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Structuring.pm (_next_content, _collect_structure):
	Remove unused functions.

2016-10-17  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Structuring.pm (_check_menu_entry): Remove 
	'$check_menu_entries' argument, and don't return anything.  
	Callers updated.
	(nodes_tree): Some comments changed.

2016-10-16  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Parser.pm (_parse_float_type): Convert type of
	float with Texinfo::Convert::Texinfo instead of with 
	Texinfo::Convert::NodeNameNormalization.
	* tp/Texinfo/Parser.pm (_end_line) <@listoffloats>: Remove 
	commented-out code.

2016-10-16  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Convert/Info.pm (output) <anchors and nodes>,
	(_node): Don't refer to 'normalized' value on an element defining an
	xref target; use 'node_content' instead.
	(output) <anchors and nodes>: Convert the anchor with _node_line
	to check for duplicates, instead of using the 'normalized' value.
	* tp/Texinfo/Convert/Plaintext.pm:
	Remove "use Texinfo::Convert::NodeNameNormalization".
	(_footnotes): Don't set 'normalized' on the elements we create
	representing footnote anchors.
	(_convert) <float>: Use 'node_content' instead of 'normalized'
	to check if this float should be an anchor.

2016-10-16  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Convert/Plaintext.pm (_convert): For 'float'
	elements, change check on 'content' value back to check on 
	'normalized' value on 'type' hash.

2016-10-16  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Convert/Plaintext.pm (_align_lines, _convert):
	Remove some commented-out lines for debugging purposes.  Reduce 