@@ -4810,12 +4810,7 @@ sub _parse_texi($;$)
                                 $line_nr);
                     }
                   } elsif ($command eq 'menu') {
-                    if ($root_commands{$current->{'parent'}->{'cmdname'}}) {
-                      push @{$self->{'current_node'}->{'menus'}}, $current;
-                    } else {
-                      $self->line_warn($self->__("\@menu in invalid context"), 
-                                       $line_nr);
-                    }
+                    push @{$self->{'current_node'}->{'menus'}}, $current;
                   }
                 } elsif ($command ne 'direntry') {
                   if ($self->{'SHOW_MENU'}) {
