@@ -1,3 +1,9 @@
+2016-10-23  Gavin Smith  <gavinsmith0123@gmail.com>
+
+	* tp/Texinfo/Parser.pm (_parse_texi): Record menu regardless of 
+	where it occurred.  (Revert change on 2016-10-08 in order to 
+	avoid failure of "long tests" under tp/tests.)
+
 2016-10-19  Gavin Smith  <gavinsmith0123@gmail.com>
 
 	* tp/Texinfo/Structuring.pm (sectioning_structure): Use 'next' 
